# minecraft_cpp

./: .gitignore  CMakeLists.txt  README.md
dependencies/GLM/: CMakeLists.txt
dependencies/cmake/: FindGLM.cmake  FindSDL2.cmake
dependencies/include/glad/: glad.h
dependencies/src/: glad.c
dev/: decode.txt
resources/: resources.mcfg  settings.mcfg
resources/blocks/: blocks.json  mesh_groups.json  structures.json  tree.txt
resources/config/: config.json  config.txt  how2use.txt
resources/shaders/: fragment.glsl  vertex.glsl
resources/terrain/: bigtree1.txt  bigtree2.txt  bigtree3.txt  mediumtree1.txt  mediumtree2.struct  mediumtree3.txt  rock1.txt  rock2.txt  smalltree1.struct  smalltree2.txt  smalltree3.txt  structs  structs.txt
source/: cmake_defines.hpp  config.cpp  config.hpp  game.cpp  game.hpp  gl_functions.hpp  globals.hpp  input.cpp  input.hpp  main.cpp  player.cpp  player.hpp  utils.cpp  utils.hpp
source/_configuration/: cmake_defines.hpp.in
source/core/: aabb.hpp  camera.cpp  camera.hpp  config.cpp  config.hpp  input.cpp  input.hpp  logger.hpp  perlin.cpp  perlin.hpp  perlin_noise.hpp  settings.cpp  settings.hpp  simplex_noise.cpp  timer.cpp  timer.hpp  ts_queue.hpp
source/game/: base_state.hpp  game.cpp  game.hpp  player.cpp  player.hpp  playing_state.cpp  playing_state.hpp
source/graphics/: chunk_mesh.cpp  chunk_mesh.hpp  cubemap_texture.cpp  cubemap_texture.hpp  gldebug.cpp  mesh.hpp  renderer.cpp  renderer.hpp  shader.cpp  texture.cpp  texture2d.cpp  vertex.hpp
source/math/: simplex_noise.cpp  simplex_noise.hpp
source/opengl_wrapper/: chunk_mesh.cpp  chunk_mesh.hpp  cubemap_texture.hpp  gldebug.cpp  gldebug.hpp  render_context.cpp  render_context.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  texture2d.hpp  vertex.hpp
source/renderer/: chunk_mesh.cpp  chunk_mesh.hpp  cubemap_texture.cpp  gldebug.cpp  mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture2d.cpp  vertex.hpp
source/states/: base_state.hpp  game_state.hpp  playing_state.cpp  playing_state.hpp
source/world/: block.hpp  blocks.cpp  blocks.hpp  chunk.cpp  chunk.hpp  structure.cpp  structure.hpp  terrain_generator.cpp  terrain_generator.hpp  world.cpp  world.hpp
